# Autonomous-ML-And-LLM-Iteration-Agent

./: .env.example  .gitignore  BUILD_LOG.md  DECISIONS.md  Dockerfile  LICENSE  LIMITATIONS.md  Makefile  README.md  RESEARCH_LOG.md  WORKFLOW.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/churn_tabular/: README.md  prepare.py  run.py
src/iterate/: __init__.py  cli.py  config.py  userconfig.py
src/iterate/adapters/compute/: base.py  kernel.py  local.py  runner.py  sandbox.py
src/iterate/adapters/data/: tabular.py
src/iterate/adapters/models/: registry.py
src/iterate/core/: agent_loop.py  code_proposer.py  codegen.py  coder.py  memory.py  orchestrator.py  proposer.py  reconstructor.py  scoring.py  summarizer.py  supervisor.py  terminator.py
src/iterate/deliver/: __init__.py  notebook.py
src/iterate/llm/: base.py  factory.py  ollama_client.py  openai_compatible.py
src/iterate/prompts/: __init__.py  prompts.yaml
src/iterate/schemas/: experiment.py  llm.py
src/iterate/targets/: base.py  model.py
tests/: conftest.py
tests/integration/: test_agentic_loop_live.py  test_churn_end_to_end.py  test_e2b_runner_live.py  test_notebook_executes.py  test_proposer_live.py  test_sandbox_codepath_live.py
tests/unit/: test_agent_loop.py  test_cli.py  test_cli_run.py  test_code_proposer.py  test_code_runner.py  test_codegen.py  test_codepath_loop.py  test_coder.py  test_compute_backend.py  test_factory.py  test_kernel.py  test_memory.py  test_model.py  test_model_registry.py  test_notebook.py  test_ollama_client.py  test_openai_compatible.py  test_orchestrator.py  test_prepare_churn.py  test_prompts.py  test_proposer.py  test_reconstructor.py  test_schemas.py  test_summarizer.py  test_supervisor.py  test_tabular.py  test_targets_base.py  test_terminator.py  test_userconfig.py
