[project]
name = "iterate"
version = "0.1.0"
description = "Autonomous research-aware iteration agent for ML models and LLM prompts. Multi-LLM backend (Claude/GPT/Llama/Deepseek), persistent memory, literature-grounded experiments, human-approval safety gates."
authors = [
    { name = "Anthony Rodrigues", email = "anthonyrodrigues443@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "agent",
    "ml-iteration",
    "prompt-engineering",
    "automl",
    "llm-eval",
    "autonomous-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM client — OpenAI SDK works against any OpenAI-compatible endpoint
    # (Ollama, Groq, Together, Deepseek, OpenAI, LM Studio, vLLM, llama.cpp server)
    "openai>=1.50.0",
    # Schemas + config
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    # CLI
    "typer>=0.12.0",
    "rich>=13.9.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Sandbox
    "e2b-code-interpreter>=1.0.0",
    # ML adapters (tabular)
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    # Persistence
    "sqlalchemy>=2.0",
    # Dataset access
    "kaggle>=1.6.0",
    "datasets>=3.0.0",
    # HTTP + retries
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
# Anthropic Claude is the only major backend that's NOT OpenAI-compatible —
# install only if you want to use Claude as a backend.
anthropic = ["anthropic>=0.40.0"]
# MCP (Model Context Protocol) integration — pluggable tools + data sources
# (filesystem, postgres, notion, drive, github, etc.). Week 4+ feature.
mcp = ["mcp>=0.9.0"]
notion = ["notion-client>=2.2.0"]
dashboard = ["streamlit>=1.40.0", "plotly>=5.24.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-recording>=0.13.0",
    "vcrpy>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[project.scripts]
iterate = "iterate.cli:app"

[project.urls]
Homepage = "https://github.com/anthonyrodrigues443/Autonomous-ML-And-LLM-Iteration-Agent"
Repository = "https://github.com/anthonyrodrigues443/Autonomous-ML-And-LLM-Iteration-Agent"
Issues = "https://github.com/anthonyrodrigues443/Autonomous-ML-And-LLM-Iteration-Agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iterate"]

# ─── Ruff (linting + formatting) ───────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow assert False in tests

# ─── mypy (type checking, strict) ──────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["kaggle.*", "lightgbm.*", "xgboost.*", "sklearn.*", "e2b_code_interpreter.*"]
ignore_missing_imports = true

# ─── pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-m",
    "not integration",  # live/networked tests are opt-in: run with `pytest -m integration`
]
markers = [
    "unit: fast unit tests",
    "integration: integration tests (may hit external APIs via VCR)",
    "slow: tests that take >5s",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
